--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "serverless-auction",
   "version": "1.0.0",
   "description": "Codingly template for Serverless Framework projects",
-  "author": "Ariel Weinberger <ariel@codingly.io>",
+  "author": "",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.25.0",
